K8S/categoryservice-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-depl
  labels:
    app: categoryservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: categoryservice
  template:
    metadata:
      labels:
        app: categoryservice
    spec:
      containers:
      - name: categoryservice
        image: categoryservice:latest 
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: categories-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: categoryservice
  ports:
  - name: grpc
    protocol: TCP
    port: 666
    targetPort: 666
  - name: webapi
    protocol: TCP
    port: 80
    targetPort: 80
