K8S/expenseservice-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-depl
  labels:
    app: expenseservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expenseservice
  template:
    metadata:
      labels:
        app: expenseservice
    spec:
      containers:
      - name: expenseservice
        image: expenseservice:latest 
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: expenses-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: expenseservice
  ports:
  - name: webapi
    protocol: TCP
    port: 80
    targetPort: 80
