K8S/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/Categories
            pathType: Prefix
            backend:
              service:
                name: categories-clusterip-srv
                port:
                  number: 80
          - path: /api/expenses
            pathType: Prefix
            backend:
              service:
                name: expenses-clusterip-srv
                port:
                  number: 80
